product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/using_hybrid_manager/migration/features.mdx
---
title: Migration features 
navTitle: Features
description: See a list of the most important features you can leverage to perform migrations with Hybrid Manager.
---

Hybrid Manager (HM) provides a comprehensive, centralized solution for database migrations, offering a wide range of features designed to simplify and accelerate your data transfer process.

## Sovereign migration solution

Perform migrations from a single platform deployed entirely within your on-premises or cloud environments. This approach provides you with complete control over your data and infrastructure, ensuring your migrations are sovereign and secure within your own network.

## Migration assessment 

HM leverages the EDB Postgres AI agent to generate an assessment of the complexity and estimated effort (LOE) required for Oracle database migrations. By analyzing the registered source database, the platform provides early insights into potential issues and the scale of the migration, helping you plan effectively.

## Database and schema management

Access detailed information about your source database through the database details page. There, you'll find information about schemas, as well as a clear breakdown of migration assessment factors.

## Migration Portal with AI Copilot

The Migration Portal is a powerful tool for Oracle-to-Postgres migrations. It automates the assessment of schemas, flags and incompatibilities. It also provides an integrated AI Copilot to help you quickly identify and resolve complex schema issues, streamlining the conversion process. Originally a web tool hosted by EDB, the Migration Portal has been integrated into HM. This integration deploys the service in your environment, supporting the sovereignty of your deployment.

## Flexible migration options

Choose the migration method that best suits your needs:

-  Snapshot migration &mdash; A fast, one-time data transfer for bulk migrations.

-  Snapshot and streaming &mdash; Suitable for migrations that require minimal downtime. It uses change data capture (CDC) to continuously capture and replicate ongoing changes from the source to the destination database.

## Diverse migration destinations

The solution offers flexibility in choosing your destination. You can migrate to databases provisioned in HM (HM-managed databases) or to externally managed Postgres databases (externally managed databases). 

## Granular migration control

Maintain precise control over your data migration with the ability to select specific database tables and columns to migrate. This feature allows you to migrate only the data you need, reducing migration time and resource usage.

## Schema and column mapping

The migration service allows for flexible schema mapping, enabling you to migrate data to tables and columns with different names in the destination database. This feature is particularly useful for restructuring data during the migration process.
